[gd_scene load_steps=4 format=2]

[ext_resource path="res://Menu/SongDisplay.gd" type="Script" id=1]
[ext_resource path="res://songs/why-oh-you-are-love/img.jpg" type="Texture" id=2]
[ext_resource path="res://Themes/DefaultTheme.tres" type="Theme" id=3]

[node name="SongDisplay" type="CenterContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
script = ExtResource( 1 )

[node name="SongDisplay" type="VBoxContainer" parent="."]
margin_left = 323.0
margin_top = 73.0
margin_right = 700.0
margin_bottom = 526.0
theme = ExtResource( 3 )
custom_constants/separation = 0

[node name="TextureRect" type="TextureRect" parent="SongDisplay"]
margin_right = 377.0
margin_bottom = 377.0
rect_min_size = Vector2( 377, 377 )
size_flags_vertical = 3
texture = ExtResource( 2 )
expand = true
stretch_mode = 6

[node name="EditableLabel" type="Label" parent="SongDisplay/TextureRect"]
visible = false
margin_left = 186.0
margin_top = 6.0
margin_right = 374.0
margin_bottom = 44.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "Not Editable!"
align = 1

[node name="NameLabel" type="Label" parent="SongDisplay"]
margin_top = 377.0
margin_right = 377.0
margin_bottom = 415.0
size_flags_vertical = 0
text = "<songname>"
align = 1
max_lines_visible = 1

[node name="HighscoreLabel" type="Label" parent="SongDisplay"]
margin_top = 415.0
margin_right = 377.0
margin_bottom = 434.0
theme_type_variation = "SmallText"
text = "999999999 99x"
align = 1

[node name="SubData" type="HBoxContainer" parent="SongDisplay"]
margin_top = 434.0
margin_right = 377.0
margin_bottom = 453.0

[node name="AuthorLabel" type="Label" parent="SongDisplay/SubData"]
margin_right = 117.0
margin_bottom = 19.0
size_flags_horizontal = 3
theme = ExtResource( 3 )
theme_type_variation = "SmallText"
text = "<author>"
align = 1

[node name="VSeparator" type="VSeparator" parent="SongDisplay/SubData"]
margin_left = 121.0
margin_right = 125.0
margin_bottom = 19.0

[node name="BPMLabel" type="Label" parent="SongDisplay/SubData"]
margin_left = 129.0
margin_right = 247.0
margin_bottom = 19.0
size_flags_horizontal = 3
theme = ExtResource( 3 )
theme_type_variation = "SmallText"
text = "<bpm>"
align = 1

[node name="VSeparator2" type="VSeparator" parent="SongDisplay/SubData"]
margin_left = 251.0
margin_right = 255.0
margin_bottom = 19.0

[node name="DifficultyLabel" type="Label" parent="SongDisplay/SubData"]
margin_left = 259.0
margin_right = 377.0
margin_bottom = 19.0
size_flags_horizontal = 3
theme = ExtResource( 3 )
theme_type_variation = "SmallText"
text = "<difficulty>"
align = 1
